Fix keyboard display on smaller sizes

--- a/resources/styles/keys.less
+++ b/resources/styles/keys.less
@@ -36,10 +36,14 @@
 }
 
 @media screen and (orientation: portrait) and not(hover), (max-width: 600px) {
-    .container-select-keyboard-layout {
+    .container-select-keyboard-layout.is-fixed {
         top: unset;
         bottom: 0;
         width: 100%;
+    }
+
+    .cavatina-display-block span.notes {
+        margin: unset;
     }
 }
 
@@ -51,7 +55,13 @@
     text-align: center;
     margin-bottom: 1em;
 
-    &:not(.keyboard-container-single-row) button:not([disabled]) {
+    &.keyboard-container-full,
+    &.keyboard-container-single-row {
+        overflow-x: scroll;
+    }
+
+    &:not(.keyboard-container-single-row):not(.keyboard-container-full)
+        button:not([disabled]) {
         &:hover {
             background-color: #2a6eb6;
             border: 1px solid #2a6eb6;
